--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -1,12 +1,12 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: gcp.streaming-platform.com
+  name: $HOST
   annotations:
     kubernetes.io/ingress.class: "nginx"
     # # nginx.ingress.kubernetes.io/secure-backends: "true"
     # nginx.ingress.kubernetes.io/rewrite-target: "/"
-    # kubernetes.io/ingress.global-static-ip-name: "ingress"
+    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
     # ingress.kubernetes.io/auth-type: basic
     # ingress.kubernetes.io/auth-secret: basic-auth
     # ingress.kubernetes.io/auth-realm: "Authentication Required"
